@@ -18,7 +18,7 @@
    <parent>
       <groupId>org.eclipse.esmf</groupId>
       <artifactId>esmf-parent</artifactId>
-      <version>17</version>
+      <version>18</version>
    </parent>
 
    <artifactId>esmf-sdk-parent</artifactId>
@@ -78,11 +78,6 @@
       <relative-native-config-path>core/esmf-native-support/src-gen/main/resources/META-INF/native-image/${project.groupId}/esmf-native-support</relative-native-config-path>
       <!-- The path to the native configs as it is reachable from the submodules -->
       <native-config-path>${project.basedir}/../../${relative-native-config-path}</native-config-path>
-
-      <!-- Dependency version overrides -->
-      <log4j-version>2.22.1</log4j-version>
-      <wagon-maven-plugin-version>1.0</wagon-maven-plugin-version>
-      <mojo-executor-version>2.4.0</mojo-executor-version>
    </properties>
 
    <dependencyManagement>
@@ -208,6 +203,11 @@
             <artifactId>mojo-executor</artifactId>
             <version>${mojo-executor-version}</version>
          </dependency>
+         <dependency>
+            <groupId>org.graphper</groupId>
+            <artifactId>graph-support-core</artifactId>
+            <version>${graph-support-version}</version>
+         </dependency>
       </dependencies>
    </dependencyManagement>
 
@@ -219,19 +219,9 @@
          <version>[3.3.3,)</version>
       </dependency>
       <dependency>
-         <groupId>org.yaml</groupId>
-         <artifactId>snakeyaml</artifactId>
-         <version>[2.0,)</version>
-      </dependency>
-      <dependency>
-         <groupId>org.apache.commons</groupId>
-         <artifactId>commons-compress</artifactId>
-         <version>[1.21,)</version>
-      </dependency>
-      <dependency>
          <groupId>commons-io</groupId>
          <artifactId>commons-io</artifactId>
-         <version>2.16.1</version>
+         <version>[2.16.1,)</version>
       </dependency>
       <dependency>
          <groupId>org.codehaus.plexus</groupId>
@@ -259,10 +249,26 @@
                            <regex>.*GraalVM.*</regex>
                            <regexMessage>A GraalVM JDK is required to build this project</regexMessage>
                         </requireProperty>
+                        <requireJavaVersion>
+                           <version>21</version>
+                           <message>Java 21 or newer is required to build this project</message>
+                        </requireJavaVersion>
                      </rules>
                   </configuration>
                </execution>
             </executions>
+         </plugin>
+
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+               <compilerArgs>
+                  <arg>-proc:full</arg>
+               </compilerArgs>
+               <showWarnings>false</showWarnings>
+               <showDeprecation>false</showDeprecation>
+            </configuration>
          </plugin>
 
          <plugin>
